# Calculator_cpp

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Calculator.sln  Calculator.vcxproj  Calculator.vcxproj.filters  Calculator_cpp.sln  Calculator_cpp.vcxproj  Calculator_cpp.vcxproj.filters  ExprHandler.cpp  ExprHandler.hpp  Operators.cpp  Operators.hpp  PluginLoader.cpp  PluginLoader.hpp  Symbol.hpp  main.cpp
plugins/: CMakeLists.txt  cos.cpp  ln.cpp  log.cpp  sin.cpp  sqrt.cpp
src/: Calculator.hpp  ExprHandler.cpp  PluginLoader.hpp  main.cpp
x64/Debug/: Calculator.exe.recipe  Calculator.ilk  Calculator.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Calculator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calculator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
